# discord-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
agent_gateway/: Dockerfile
agent_gateway/gateway/: main.py
discord_mcp/: __init__.py  check.py  client.py  reply_bot.py  server.py
examples/: claude_desktop_config.example.json
scripts/: deploy_guest_exec.py  deploy_remote.sh  homelab_docker_up.sh  push_gateway_env_guest_exec.py
