[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-mcp"
version = "0.1.0"
description = "MCP server for Discord REST API (bot token)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "taka392" }]
keywords = ["mcp", "discord", "cursor", "claude"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
discord-mcp = "discord_mcp.server:main"
discord-mcp-check = "discord_mcp.check:main"

[project.urls]
Repository = "https://github.com/taka392/discord-mcp"

[tool.setuptools.packages.find]
include = ["discord_mcp*"]
